Style search, fix dark mode bug

--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -32,7 +32,9 @@ body {
 
 .main {
   min-height: 100vh;
-  margin-top: 3.5em;
+
+  margin-top: 6em;
+  padding: 0 1em;
 
   background-color: $neutral-gray;
   color: $dark-gray;
