--- a/src/components/AppHeader/styles/AppHeader.scss
+++ b/src/components/AppHeader/styles/AppHeader.scss
@@ -11,7 +11,7 @@
   transform-origin: top center; /* Adjust origin if needed */
   // transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition: 0.2s ease-in;
-  top: 3.6em;
+  top: 4.6em;
   height: 0px;
   // opacity: 0;
   border-bottom-right-radius: 5px;
