--- a/src/components/Prefs/styles/Prefs.scss
+++ b/src/components/Prefs/styles/Prefs.scss
@@ -15,9 +15,9 @@
   flex-direction: column;
   // gap: 1em;
   position: absolute;
-  top: 3.5em;
+  top: 4.6em;
   @media (max-width: 1020px) {
-    top: 3.5em;
+    top: 4.6em;
   }
 
   // right: -300px;
@@ -84,7 +84,7 @@
 }
 
 .prefs-panel.visible {
-  right: 1em;
+  right: 0.2em;
 }
 
 .prefs-control {
